fix text align, margins

--- a/resources/public/css/style.css
+++ b/resources/public/css/style.css
@@ -1,2 +1,11 @@
 /* some style */
+html{
+    padding: 0px;
+    margin: 0px;
+    }
 
+body{
+    padding: 0px;
+    margin: 0px;
+    overflow: hidden;
+    }
